# SoursARC

./: .gitignore  readme_ja.md
.copilot/: 今回のネタ.md
server/soursarc-server/: Cargo.toml  config.json
server/soursarc-server/src/: logger.rs  main.rs
server/soursarc-server/src/server/: mod.rs
server/soursarc-server/src/server/dash_board/: admin_users.rs  dash_board.css  limiter.rs  mod.rs
server/sousarc-server/: Cargo.toml
server/sousarc-server/src/: logger.rs
server/sousarc-server/src/server/: mod.rs
server/sousarc-server/src/server/ws/: mod.rs
test/topo-test/: Cargo.toml
test/topo-test/src/: main.rs
test/topo-test/src/domain/: element.rs  mod.rs  user.rs  work.rs
ui/: generateEmojiMap.js  package-lock.json  package.json
ui/archive/soursarc/: package-lock.json  package.json
ui/archive/soursarc/src/: App.tsx
ui/archive/soursarc/src/assets/emoji/: mapReverse.json
ui/archive/soursarc/src/components/: EmojiText.tsx
ui/archive/soursarc/src/components/lib_jsx/CommonWindow/: CommonWindow.tsx
ui/archive/soursarc/src/styles/: main.scss
ui/front/: index.html  package.json  pnpm-lock.yaml
ui/front-wasm/sousarc-server-comm/: Cargo.toml
ui/front-wasm/sousarc-server-comm/src/: lib.rs
ui/front/src/: App.tsx  index.scss
ui/front/src/Header/: index.tsx
ui/front/src/Main/: index.tsx
ui/front/src/libraries/: instances.ts
ui/soursarc/: package-lock.json  package.json
ui/soursarc/assets/emoji/: emojiMetaMap.json
ui/soursarc/src/: App.tsx
ui/soursarc/src/assets/emoji/: map.json
ui/soursarc/src/components/: SamplePopover.tsx  SampleWindowWidget.tsx  normalizeEmoji.ts
ui/soursarc/src/components/lib_jsx/: CommonPulldown.tsx
ui/soursarc/src/components/lib_jsx/CommonWindow/: CommonWindow.tsx
ui/soursarc/src/styles/: main.scss  style.css
ui/wasm/soursarc-ui-utils/: Cargo.toml
ui/wasm/soursarc-ui-utils/src/: lib.rs
