[package]
name = "topo-test"
version = "0.1.0"
edition = "2024"

[dependencies.sousarc-content-types]
path = "../../library/sousarc-content-types"

[dependencies.uuid]
version = "1"
features = ["v7"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies]
serde_json = "1"
rmp-serde = "1"
hex = "0.4"