[package]
name = "sousarc-server-comm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies.sousarc-content-types]
path = "../../../library/sousarc-content-types"

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.serde]
version = "1"
features = [
  "derive",
]

[dependencies]
wasm-bindgen-futures = "0.4"
rmp-serde = "1"
serde_json = "1"
parking_lot = { version = "0.12" }